unpackaged/main/default/objects/Opportunity/fields/Incremental_PG_PMP__c.field-meta.xml
<CustomField>
    <fullName>Incremental_PG_PMP__c</fullName>
    <label>Incremental PG PMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>