unpackaged/main/default/objects/Opportunity/fields/Incremental_Value__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Value__c</fullName>
    <formula>IO__r.Incremental_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>