unpackaged/main/default/objects/Opportunity/fields/Internal_comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_comments__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Internal comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>