unpackaged/main/default/objects/Opportunity/fields/Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009356 - Client Reporting via Excel</description>
    <label>Internal Only</label>
    <type>Checkbox</type>
</CustomField>