unpackaged/main/default/objects/Opportunity/fields/IO__c.field-meta.xml
<CustomField>
    <fullName>IO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**eBay Ads**</description>
    <label>IO</label>
    <referenceTo>IO__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>