unpackaged/main/default/objects/Opportunity/fields/IO_number__c.field-meta.xml
<CustomField>
    <fullName>IO_number__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <externalId>true</externalId>
    <label>IO number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>