unpackaged/main/default/objects/Opportunity/fields/IO_Paper__c.field-meta.xml
<CustomField>
    <fullName>IO_Paper__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: IO Paper  ||</description>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terms</valueSetName>
    </valueSet>
</CustomField>