unpackaged/main/default/objects/Opportunity/fields/JIRA_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Link__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: JIRA Link || 00568884 |</description>
    <label>JIRA Link</label>
    <type>Url</type>
</CustomField>