unpackaged/main/default/objects/Opportunity/fields/KPIBenchmark__c.field-meta.xml
<CustomField>
    <fullName>KPIBenchmark__c</fullName>
    <description>US-0007876</description>
    <label>KPI Benchmark</label>
    <type>TextArea</type>
</CustomField>