unpackaged/main/default/objects/Opportunity/fields/KPIMeasurement__c.field-meta.xml
<CustomField>
    <fullName>KPIMeasurement__c</fullName>
    <description>US-0007876</description>
    <label>KPI Measurement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Upper Funnel/Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Mid Funnel (Engagement)</fullName>
            </value>
            <value>
                <fullName>GMV/On-site Sales</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>