unpackaged/main/default/objects/Opportunity/fields/Last_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change_Date__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Last Stage Change Date</label>
    <type>Date</type>
</CustomField>