unpackaged/main/default/objects/Opportunity/fields/LatestCreatedQuoteDate__c.field-meta.xml
<CustomField>
    <fullName>LatestCreatedQuoteDate__c</fullName>
    <description>US-0008874 - [Ads 2020] Prevent Deletion of Ad Products &amp; Quote Line Items via Make Primary</description>
    <label>Latest Created Quote Date</label>
    <summarizedField>Quote.CreatedDate</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>