unpackaged/main/default/objects/Opportunity/fields/Lead_Segment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Segment__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Lead Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
                <label>SMB (small medium business)</label>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <label>Enterprise (large retailers)</label>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Authorized Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>