unpackaged/main/default/objects/Opportunity/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0075 eBay Ltd. (UK)</fullName>
            </value>
            <value>
                <fullName>0315 eBay (UK) Ltd., Adv Grp DE</fullName>
            </value>
            <value>
                <fullName>0323 eBay (UK) Ltd., French Branch</fullName>
            </value>
            <value>
                <fullName>0324 eBay (UK) Ltd., Italian Branch</fullName>
            </value>
            <value>
                <fullName>0111 eBay Marketplaces GmbH</fullName>
            </value>
            <value>
                <fullName>0340 (Shutl)</fullName>
            </value>
            <value>
                <fullName>0062 eBay GmbH (Germany)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>