unpackaged/main/default/objects/Opportunity/fields/LineItems_Sort_Type__c.field-meta.xml
<CustomField>
    <fullName>LineItems_Sort_Type__c</fullName>
    <defaultValue>&#39;N/A&#39;</defaultValue>
    <description>US-0009356 - Client Reporting via Excel</description>
    <label>LineItems Sort Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatically</fullName>
            </value>
            <value>
                <fullName>Manually</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>