unpackaged/main/default/objects/Opportunity/fields/Linkedin_Profile__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Profile__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Linkedin Profile</label>
    <type>Url</type>
</CustomField>