unpackaged/main/default/objects/Opportunity/fields/locatedInEU__c.field-meta.xml
<CustomField>
    <fullName>locatedInEU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009221 - [Ads 2020] Field &amp; Formulas for Revenue Recognition and Compliance.
auto populate by processes (to avoid formula limitation)</description>
    <label>locatedInEU</label>
    <type>Checkbox</type>
</CustomField>