unpackaged/main/default/objects/Opportunity/fields/Lost_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Other_Reason__c</fullName>
    <description>US-0010265 - Ads Closed Lost reason Other explanation</description>
    <label>Lost Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>