unpackaged/main/default/objects/Opportunity/fields/Main_Meta_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Meta_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections
US-0008585 - [NA] Merchant Integration - Initiate help request</description>
    <label>Main Meta Category</label>
    <referenceTo>Category_Tree__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>