unpackaged/main/default/objects/Opportunity/fields/Media_Contact__c.field-meta.xml
<CustomField>
    <fullName>Media_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition:Media Contact||</description>
    <label>Media Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Media Contact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>