unpackaged/main/default/objects/Opportunity/fields/Media_Plan__c.field-meta.xml
<CustomField>
    <fullName>Media_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** eBay Ads **</description>
    <label>Media Plan</label>
    <referenceTo>Media_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>