unpackaged/main/default/objects/Opportunity/fields/Name_Discount_I__c.field-meta.xml
<CustomField>
    <fullName>Name_Discount_I__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Name Discount I</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kundenrabatt</fullName>
            </value>
            <value>
                <fullName>Neukundenrabatt</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>12.5%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>17%</fullName>
            </value>
            <value>
                <fullName>17.5%</fullName>
            </value>
            <value>
                <fullName>18%</fullName>
            </value>
            <value>
                <fullName>18.5%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>