unpackaged/main/default/objects/Opportunity/fields/Name_Discount_II__c.field-meta.xml
<CustomField>
    <fullName>Name_Discount_II__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Name Discount II</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sonderrabatt</fullName>
            </value>
            <value>
                <fullName>Kooperationsrabatt</fullName>
            </value>
            <value>
                <fullName>Revenue share for partner</fullName>
            </value>
            <value>
                <fullName>Remise Pack/Multisite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>