unpackaged/main/default/objects/Opportunity/fields/New_Agency_Hold__c.field-meta.xml
<CustomField>
    <fullName>New_Agency_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: New Agency Hold ||</description>
    <label>New Agency Hold</label>
    <type>Checkbox</type>
</CustomField>