unpackaged/main/default/objects/Opportunity/fields/New_Terms_for_Review__c.field-meta.xml
<CustomField>
    <fullName>New_Terms_for_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Terms for Review</label>
    <type>Checkbox</type>
</CustomField>