unpackaged/main/default/objects/Opportunity/fields/No_Rate_Card_Exception__c.field-meta.xml
<CustomField>
    <fullName>No_Rate_Card_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: No Rate Card Exception || 00568884 |</description>
    <label>No Rate Card Exception</label>
    <type>Checkbox</type>
</CustomField>