unpackaged/main/default/objects/Opportunity/fields/Non_Standard_Billing_Details__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Billing_Details__c</fullName>
    <label>Non Standard Billing Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly Invoice</fullName>
            </value>
            <value>
                <fullName>Early Invoice</fullName>
            </value>
            <value>
                <fullName>Non Standard Payment terms (other than NET30)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>