unpackaged/main/default/objects/Opportunity/fields/Non_Standard_Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Billing_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Standard Billing Terms</label>
    <type>Checkbox</type>
</CustomField>