unpackaged/main/default/objects/Opportunity/fields/Number_of_Dually_Signed_Quote__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dually_Signed_Quote__c</fullName>
    <description>US-0008975 - Validation rules when the Previous Quote is set to Primary</description>
    <label>Number of Dually Signed Quote</label>
    <summaryFilterItems>
        <field>Quote.Dually_Signed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>