unpackaged/main/default/objects/Opportunity/fields/Number_of_Exit_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exit_Days__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Number of Exit Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>