unpackaged/main/default/objects/Opportunity/fields/Number_of_Primary_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Primary_Quotes__c</fullName>
    <description>US-0008451</description>
    <label>Number of Primary Quotes</label>
    <summaryFilterItems>
        <field>Quote.Primary_Quote__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>