unpackaged/main/default/objects/Opportunity/fields/Number_of_Revised_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Revised_Quotes__c</fullName>
    <description>US-0008975 - Validation rules when the Previous Quote is set to Primary</description>
    <label>Number of Revised Quotes</label>
    <summaryFilterItems>
        <field>Quote.Is_Revised_Quote__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>