unpackaged/main/default/objects/Opportunity/fields/Offer_Number__c.field-meta.xml
<CustomField>
    <fullName>Offer_Number__c</fullName>
    <formula>IF(ISBLANK(Offer_Number_Legacy__c), Offer_Number_Auto__c, Offer_Number_Legacy__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Number</label>
    <type>Text</type>
</CustomField>