unpackaged/main/default/objects/Opportunity/fields/Offer_Number_Auto__c.field-meta.xml
<CustomField>
    <fullName>Offer_Number_Auto__c</fullName>
    <displayFormat>ON-{000000}</displayFormat>
    <label>Offer Number Auto</label>
    <type>AutoNumber</type>
</CustomField>