unpackaged/main/default/objects/Opportunity/fields/Offer_Number_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Offer_Number_Legacy__c</fullName>
    <label>Offer Number Legacy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>