unpackaged/main/default/objects/Opportunity/fields/Offer_number_old__c.field-meta.xml
<CustomField>
    <fullName>Offer_number_old__c</fullName>
    <description>US-0009026 - [Ads 2020] Add Unique &#39;Offer Number&#39; to Advertising Opportunities in Hive</description>
    <displayFormat>ON-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Offer number_old</label>
    <type>AutoNumber</type>
</CustomField>