unpackaged/main/default/objects/Opportunity/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>US-0008585 - [NA] Merchant Integration - Initiate help request

INTEG- N || APEX – N || CC - N || WF – N || AP – N || FU – N ‘|| OM - N|| Desc – The source Oracle ID (if present).  Introduced for the APAC Telesales Revamp project. || VAL - N || CR# - 53127 &amp; CR 2560512||</description>
    <externalId>true</externalId>
    <inlineHelpText>The source Oracle ID (if present).</inlineHelpText>
    <label>Oracle ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>