unpackaged/main/default/objects/Opportunity/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>US-0008578 - [Ads 2020] Re-create Ability to Book Ad Products from the Opportunity Object</description>
    <externalId>true</externalId>
    <label>Order Id (DFP)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>