unpackaged/main/default/objects/Opportunity/fields/Other_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Source__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Other Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>