unpackaged/main/default/objects/Opportunity/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Others|| 00464582 |</description>
    <label>Others</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>