unpackaged/main/default/objects/Opportunity/fields/Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>Owner_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Helper field to get Opp Owner information into formulas.
US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Owner_Link</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityLinks</relationshipName>
    <type>Lookup</type>
</CustomField>