unpackaged/main/default/objects/Opportunity/fields/Parent_Agency__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agency__c</fullName>
    <formula>Agency__r.Parent_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Agency</label>
    <type>Text</type>
</CustomField>