unpackaged/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>US-9135</description>
    <label>Invoice Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly in arrears</fullName>
                <default>true</default>
                <label>Monthly in arrears</label>
            </value>
            <value>
                <fullName>One-off Payment</fullName>
            </value>
            <value>
                <fullName>quarterly</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Up-front</fullName>
                <isActive>false</isActive>
                <label>Up-front</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>