unpackaged/main/default/objects/Opportunity/fields/PMP_Subtype__c.field-meta.xml
<CustomField>
    <fullName>PMP_Subtype__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: PMP Subtype ||</description>
    <label>PMP Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>