unpackaged/main/default/objects/Opportunity/fields/Pre_approved_template__c.field-meta.xml
<CustomField>
    <fullName>Pre_approved_template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Pre-approved template</label>
    <type>Checkbox</type>
</CustomField>