unpackaged/main/default/objects/Opportunity/fields/Previous_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opportunity_Amount__c</fullName>
    <label>Previous Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>