unpackaged/main/default/objects/Opportunity/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>