unpackaged/main/default/objects/Opportunity/fields/Product_line__c.field-meta.xml
<CustomField>
    <fullName>Product_line__c</fullName>
    <description>Thi Field is matching the SAP &quot;Product line key&quot;.
Guidance:
•Adsales = a deal which is not multinational and not ad network, and for which only IAB standard advertising products are involved
• Partnership = a deal which is not multinational and not ad network, and for which more than just IAB standard advertising products are involved
• Agency = sales house with which eBay has a contract, which resells placements on our behalf, and to which we give monthly or quarterly commission
• AdCommerce: to be used only when AdCommerce placement is sold on its own, otherwise it should be under Adsales, Partnership or Agency.
US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <inlineHelpText>Guidance:
• Adsales = only IAB standard advertising products, NO mulitinational deal nor adnetworks
• Partnership =with non-IAB-standard products
• Agency =For sales house only
• AdCommerce: only for single adcommerce sales</inlineHelpText>
    <label>Product line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adsales (10046)</fullName>
            </value>
            <value>
                <fullName>Partnership (10010)</fullName>
            </value>
            <value>
                <fullName>Agency (10049)</fullName>
            </value>
            <value>
                <fullName>Multinational (10058)</fullName>
            </value>
            <value>
                <fullName>AdNetworks (10059)</fullName>
            </value>
            <value>
                <fullName>GoogleADXchange (10084)</fullName>
            </value>
            <value>
                <fullName>Programmatic Selling (10111)</fullName>
            </value>
            <value>
                <fullName>Shipping (10007)</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Comm. Trading Desk (10029)</fullName>
            </value>
            <value>
                <fullName>Brand Solutions (10172)</fullName>
            </value>
            <value>
                <fullName>Merchant Promotions (10174)</fullName>
            </value>
            <value>
                <fullName>Audience Extension (10029)</fullName>
            </value>
            <value>
                <fullName>Criteo PL (10218)</fullName>
            </value>
            <value>
                <fullName>PG &amp; PMP Forecasting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>