unpackaged/main/default/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>